2013-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Benjamin Kerensa
	* oldrecover-src/extract_list.c: Typo.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm: Use Amanda::Debug.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing of config override.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix previous patch.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Parse header without dle_str.

2013-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-dest-taper-splitter.c: Abort with better message if
	  memory allocation fail.
	* server-src/amcheck.c: Check device-output-buffer-size is nmot larger
	  than physical memory.
	* server-src/amdump.pl, server-src/amflush.c,
	  server-src/amvault.pl: Print "please run amcleanup if you wish to
	  abort the current process and clean up open log files".

2013-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg (_read_tapelist): Abort if a duplicate
	  label is found.

2013-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Check error result from _get_state.

2013-08-26  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/element-glue.c (do_directtcp_connect): Do not free
	  unallocated memory.

2013-08-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: s/g_debug/debug/

2013-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Print progress to debug file if not on a tty.

2013-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c (xfer_filter_process): Add must_drain,
	  cancel_on_success and ignore_broken_pipe flag).
	* xfer-src/filter-process.c (child_watch_callback): Send XMSG_INFO.
	* xfer-src/xfer-element.c: Initialize new flags.
	* xfer-src/xfer-element.h (XferElement): Add must_drain, drain_mode,